feat: add Stores list and implement pagination
